# GHub-ShiftKey-Extra

./: .gitignore  DeviceMapping.lua  DeviceMappingAtmel.lua  DeviceMappingMacOS.lua  DeviceMappingWoW.lua  README.md
AutoHotKey/G600/: ScrollWheel.ahk
KeyMapper/: CMakeLists.txt  ConfigFile.cc  ConfigFile.hh  DeviceFile.cc  DeviceFile.hh  KeyMapper.cc  KeyMapper.conf
lua/: BaseHandlerTable.lua  DeviceEventHandler.lua  DirectKeyMap.lua  DirectKeyMapOverride.lua  DirectKeyWithModifierMap.lua  DirectMacroMap.lua  DirectMouseButtonMap.lua  GHubDefs.lua  ModifierState.lua  OneShotKeyCombinationMap.lua  OneShotMacroMap.lua  OneShotModifiedKeyMap.lua  TabNavigationSequence.lua  strict.lua
